--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             functionality, aesthetics, and efficient work environments.</li>
                     </ol>
                     </p>
-                    <a href="https://siddhant03092001.github.io/Responsive%20site/index.html"><i
+                    <a href="https://siddhant03092001.github.io/new%20project/index.html"><i
                             class='bx bx-link-external'></i></a>
                 </div>
             </div>
